# mini-cinema

./: .gitignore  CMakeLists.txt  README.md  dns_libis.cpp  dns_libis.f90  dns_libis.h  fetch_scivis.py  loader.cpp  loader.h  main.cpp  plot_fif.py  profiling.cpp  profiling.h  run_cinema_bench.sh  set_ospray_vars.sh  simgrid.cpp  simgrid.h  util.cpp  util.h
configs/: foot.json  libis_example_sim.json  libis_lammps_bench.json  libis_lammps_example.json  miranda.json  present.json
